client/styles/layout/project.module.scss
@import "../import.module.scss";
.project {
  background: linear-gradient(
    0deg,
    $bgc-gradient-brown 0%,
    $bgc-gradient-purple 31%,
    $bgc-gradient-blue 100%
  );
  .section-title {
    @include heading-text-shadow(
      $neon-color-primary,
      $neon-color-primary-saturated
    );
    @include slide-left-animation(0.6s);
  }

  h3 {
    margin: 1rem 0;
    font-size: $font-size-heading-S;
    letter-spacing: 0.2rem;
  }
  display: grid;
  grid-gap: 2rem;
  li {
    padding: 0.2rem 0;
  }
  .hero-section {
    .hero-image-desktop {
      img {
        display: none;
      }
    }
    .text {
      h2 {
        margin: 1.5rem 0;
      }
      .app-type,
      .time-frame {
        font-family: $font-family-heading;
        text-shadow: 0px 0px 10px $neon-color-secondary;
        @include slide-left-animation(0.9s);
      }
      .hero-image-phone {
        display: flex;
        align-items: center;
        justify-content: center;
        padding-top: 1rem;
        overflow: hidden;
        img {
          display: block;
          margin: 0 auto;
          animation: slide-right 0.9s;
          @include slide-right-animation(1s);
          width: 220px;
        }
      }
      p {
        margin: 0.5rem 0;
      }
      .description {
        @include slide-up-animation-quick(0.4s);
      }
      button {
        @include neon-button-without-hover;
        @include slide-up-animation-quick(0.4s);
        @include neon-button-hover-transition;
        text-transform: none;
        margin: 2rem auto;
      }
    }
  }
  .features {
    display: none;
  }
  .technology {
    ul.tech-names {
      display: flex;
      flex-flow: row wrap;
      gap: 0.5rem;
      padding: 1rem 0;
      @include slide-up-animation-quick(0.7s);
      li {
        flex-grow: 1;
        padding: 0.8rem 1rem;
        text-align: center;
        border: 1px solid $border-color;
        box-shadow: 0px 0px 3px $neon-color-tertiary,
          inset 0 0 3px $neon-color-tertiary;
        text-shadow: 0px 0px 10px $neon-color-secondary;
        font-family: $font-family-heading;
      }
    }
    ul.tech-point {
      padding-left: 16px;
      list-style: disc;
      li {
        @include slide-up-animation-slow(0.5s);
      }
    }
  }
  .list-info {
    ul {
      padding-left: 16px;
      list-style: disc;
      li {
        padding: 0.5rem 0;
      }
    }
    .top-border {
      width: 100%;
      height: 2px;
      background-color: #fff;
      border-radius: 1px;
      box-shadow: 0px 0px 5px #fff;
    }
    .list-content {
      padding: 1.5rem 0;
    }
  }
}

@media only screen and (min-width: $desktop-min-width) {
  .project {
    grid-gap: 4rem;
    padding-top: 6rem;
    padding-bottom: 6rem;
    h2 {
      font-size: $font-size-heading-L;
    }
    h3 {
      font-size: $font-size-heading-M;
    }
    > section {
      width: 100%;
    }
    .hero-section {
      display: grid;
      grid-template-columns: repeat(2, 50%);
      align-items: start;
      .text {
        h2 {
          @include slide-up-animation-quick(1.4s);
        }
        .app-type,
        .time-frame {
          @include slide-up-animation-quick(1.7s);
        }
      }
      .hero-image-desktop {
        display: flex;
        justify-content: center;
        align-items: center;
        padding: 1.5rem 0 0 2rem;
        img {
          display: block;
          width: 300px;
          @include zoom-left-animation(0.9s);
        }
      }
      .text {
        .app-type,
        .time-frame {
          font-size: $font-size-text-large;
        }
        .hero-image-phone {
          display: none;
        }
        p {
          margin: 1rem 0;
        }
        .description {
          @include slide-up-animation-quick(1.8s);
        }
        button {
          margin: 2rem 0;
          width: 245px;
          @include slide-up-animation-quick(2s);
        }
      }
    }
    .features {
      display: block;
      position: relative;
      padding: 5rem 0;
      margin: 0 auto;
      .background-color {
        z-index: 0;
        background-color: rgba($color: #fff, $alpha: 0.3);
        position: absolute;
        top: 50%;
        left: 50%;
        transform: translate(-50%, -50%);
        width: 100vw;
        height: 100%;
        overflow: hidden;
        border-radius: 50% / 15%;
      }
      .content-wrapper {
        position: relative;
        z-index: 3;
        .intro {
          margin: 1rem 0;
          font-size: $font-size-heading-S;
          font-family: $font-family-heading;
        }
        .features-wrapper {
          position: relative;
          z-index: 10;
          display: grid;
          grid-template-columns: repeat(3, 1fr);
          padding-top: 1rem;
          .feature {
            display: flex;
            flex-flow: column nowrap;
            align-items: center;
            padding: 0 1rem;
            img {
              padding: 1rem 0 0 2rem;
              width: 100%;
            }
            .keyfrase {
              margin: 0;
              font-size: $font-size-heading-S;
              font-family: $font-family-heading;
              text-align: center;
              @include slide-up-animation-quick(0.5s);
            }
            .description {
              @include slide-up-animation-quick(0.7s);
            }
          }
        }
      }
    }
    .list-info {
      .list-content {
        display: grid;
        grid-template-columns: repeat(2, 50%);
        justify-content: center;
        align-items: center;
        h3 {
          font-size: $font-size-heading-S;
        }
      }
    }
  }
}

